# otellme

./: CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  book.toml
.github/workflows/: ci.yaml
book/: SUMMARY.md  ingestor.md  ingestror.md  introduction.md
crates/ingestor/: Cargo.toml
crates/ingestor/src/: error.rs  ingestor.rs  lib.rs  main.rs  server.rs
crates/ingestor/src/grpc/: core.rs  mod.rs  namings.rs  server.rs  service.rs  service_impl.rs
crates/ingestor/src/httpx/: mod.rs  server.rs  signal_paths.rs
crates/ingestor/src/httpx/service/: core.rs  mod.rs  serialization.rs
crates/ingestor/src/httpx/service/content_type/: core.rs  error.rs  mod.rs
crates/ingestor/src/message_generics/: message_signal.rs  mod.rs  sealed.rs  signal_message.rs
crates/ingestor/src/message_generics/request/: empty.rs  is_empty.rs  mod.rs
crates/ingestor/src/message_generics/response/: mod.rs  partial_success.rs  success.rs  warning.rs
crates/ingestor/src/service/: mod.rs
crates/ingestor/src/services/: logs.rs  mod.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs  non_empty_string.rs  non_emtpy_string.rs
crates/utils/src/instrumentation/: core.rs  layers.rs  mod.rs
