[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
authors = ["Gabriel Hansson <gabrielhansson00@gmail.com>"]
repository = "https://github.com/gibbz00/otellme"
exclude = ["/.github"]
edition = "2021"
readme = "README.md"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
opentelemetry-proto = "0.5"
tokio = { version = "1", default-features = false }
tonic = { version = "0.11", default-features = false }
tracing = "0.1"
tracing-panic = "0.1.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[workspace.lints.rust]
unused_must_use = "deny"
missing_docs = "deny"
