[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
authors = ["Gabriel Hansson <gabrielhansson00@gmail.com>"]
repository = "https://github.com/gibbz00/otellme"
exclude = ["/.github"]
edition = "2021"
readme = "README.md"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
axum = "0.7"
bytes = "1"
futures-util = "0.3"
http = "1"
impl-tools = "0.10"
once_cell = "1"
opentelemetry-proto = "0.5"
prost = "0.12"
serde = "1"
serde_json = "1"
strum = { version = "0.26", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", default-features = false }
tonic = { version = "0.11", default-features = false }
tower-service = "0.3"
tracing = "0.1"
tracing-panic = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[workspace.lints.rust]
unused_must_use = "deny"
missing_docs = "deny"
