[package]
name = "otellme-ingestor"
authors.workspace = true
repository.workspace = true
exclude.workspace = true
edition.workspace = true
readme.workspace = true
version.workspace = true

[lints]
workspace = true

[features]
default = ["grpc", "logs", "metrics", "traces"]

# Transport system
grpc = ["dep:impl-tools", "dep:once_cell", "dep:tonic", "dep:tower-service"]
http = [
  "dep:axum",
  "dep:bytes",
  "dep:http",
  "dep:serde",
  "dep:serde_json",
  "dep:strum",
  "dep:thiserror",
  "opentelemetry-proto/with-serde",
]

# Signal
logs = ["opentelemetry-proto/logs"]
metrics = ["opentelemetry-proto/metrics"]
traces = ["opentelemetry-proto/trace"]

[dependencies]
otellme-utils = { path = "../utils", version = "0" }

anyhow.workspace = true
futures-util.workspace = true
opentelemetry-proto = { workspace = true, features = ["gen-tonic"] }
prost.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing.workspace = true

# OTLP/gRPC
impl-tools = { workspace = true, optional = true }
once_cell = { workspace = true, optional = true }
tonic = { workspace = true, default-features = false, features = ["prost", "transport", "gzip"], optional = true }
tower-service = { workspace = true, optional = true }

# OTLP/HTTP
axum = { workspace = true, features = ["http2"], optional = true }
bytes = { workspace = true, optional = true }
http = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
strum = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }

[dev-dependencies]
tower-service.workspace = true
