[package]
name = "otellme-utils"
authors.workspace = true
repository.workspace = true
exclude.workspace = true
edition.workspace = true
readme.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tracing-panic.workspace = true
tracing-subscriber.workspace = true
